--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -43,7 +43,7 @@ spring:
         dialect.storage_engine: innodb
     show-sql: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
 
   servlet:
     multipart:
