--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -73,3 +73,8 @@ login:
 
 cors:
   allowed-origins: ${CORS_ALLOWED_ORIGINS}
+
+gemini:
+  api-key: ${GEMINI_API_KEY}
+  model: ${GEMINI_MODEL}
+  system-instruction: ${GEMINI_SYSTEM_INSTRUCTION}
